# sf

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  SPEC.md  bench.sh
src/: fd_oracle_tests.rs  fd_parity_tests.rs  filter.rs  main.rs  mdfind.rs  output.rs  query.rs  test_support.rs
tests/: integration.rs
tests/fixtures/repo/: .gitignore
