[package]
name = "spotlight-find"
version = "0.1.0"
edition = "2024"
description = "Index-powered file search for macOS. Queries Spotlight instead of walking the filesystem."
license = "MIT"
repository = "https://github.com/odysseus0/sf"
readme = "README.md"
default-run = "sf"

[[bin]]
name = "sf"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
